Dropdown z-index fix

--- a/app/Components/Header/Header.css
+++ b/app/Components/Header/Header.css
@@ -133,7 +133,7 @@ header .links_wrapper .delay_dropdown .delay_dropdown_toggle_menu {
   scale: 1 0;
   transform-origin: top center;
   transition: var(--dropdown-close-transition);
-  z-index: 5;
+  z-index: 50;
 }
 
 header .links_wrapper .delay_dropdown.dropdown_open .delay_dropdown_toggle_menu {
